--- a/Projects/ProjectKB/Config/EditProjectKBConfig.xaml
+++ b/Projects/ProjectKB/Config/EditProjectKBConfig.xaml
@@ -129,6 +129,9 @@
         </ScrollViewer>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
+                <Button Content="保存配置" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="SaveSetting_Click" Margin="5,0,0,0"/>
+                <Button Content="加载配置" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="LoadSetting_Click" Margin="5,0,0,0"/>
+
                 <Button Content="重置" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="Reset_Click" Margin="5,0,0,0"/>
                 <Button Content="关闭" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="Close_Click" Margin="5,0,0,0"/>
             </StackPanel>
