--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam1.xaml
@@ -89,6 +89,10 @@
                         <Button DockPanel.Dock="Right" Margin="2,0"   Content="{x:Static properties:Resources.Refresh}" Click="Button_RefreshImg_Click"/>
                         <ComboBox x:Name="ComboBoxImg"  Margin="2,0"  Style="{StaticResource ComboBox.Small}"/>
                     </DockPanel>
+                    <DockPanel Margin="0,2">
+                        <TextBlock Text="背景图片"  Margin="2,0,5,0"/>
+                        <TextBox Text="{Binding PoiConfig.BackgroundFilePath}" IsReadOnly="True"/>
+                    </DockPanel>
                     <StackPanel  Margin="2" Orientation="Horizontal">
                         <Button  ToolTip="保存关注点" Click="Button_Save_Click" HorizontalAlignment="Right" Margin="0,0,5,0">
                             <Image Source="{StaticResource DrawingImageSave}" Height="20" />
