--- a/Plugins/ColorVisonChat/App.xaml
+++ b/Plugins/ColorVisonChat/App.xaml
@@ -2,17 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ColorVisonChat"
-             StartupUri="ChatGPTWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/HandyControl;component/Themes/basic/colors/colors.xaml"/>
                 <ResourceDictionary Source="/HandyControl;component/Themes/Theme.xaml"/>
-                <ResourceDictionary Source="/ColorVision.Util;component/Themes/White.xaml"/>
-                <ResourceDictionary Source="/ColorVision.Util;component/Themes/Base.xaml"/>
-                <ResourceDictionary Source="/ColorVision.Util;component/Themes/Menu.xaml"/>
-                <ResourceDictionary Source="/ColorVision.Util;component/Themes/GroupBox.xaml"/>
-                <ResourceDictionary Source="/ColorVision.Util;component/Themes/Icons.xaml"/>
+                <ResourceDictionary Source="/ColorVision.Themes;component/Themes/White.xaml"/>
+                <ResourceDictionary Source="/ColorVision.Themes;component/Themes/Base.xaml"/>
+                <ResourceDictionary Source="/ColorVision.Themes;component/Themes/Menu.xaml"/>
+                <ResourceDictionary Source="/ColorVision.Themes;component/Themes/GroupBox.xaml"/>
+                <ResourceDictionary Source="/ColorVision.Themes;component/Themes/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
