--- a/Projects/ProjectKB/Config/EditProjectKBConfig.xaml
+++ b/Projects/ProjectKB/Config/EditProjectKBConfig.xaml
@@ -92,6 +92,10 @@
                             <TextBlock Text="KBLVSacle " Width="120"/>
                             <TextBox Width="140"  Text="{Binding KBLVSacle}"/>
                         </StackPanel>
+                        <StackPanel  Margin="0,0,0,5" Orientation="Horizontal">
+                            <TextBlock Text="打开图像延迟 " Width="120"/>
+                            <TextBox Width="140"  Text="{Binding ViewImageReadDelay}"/>
+                        </StackPanel>
                     </StackPanel>
                 </Border>
                 <Border Grid.Row="1" Background="{StaticResource GlobalBorderBrush}" BorderThickness="1" BorderBrush="{ StaticResource BorderBrush}" CornerRadius="5" Margin="0,0,0,5">
