--- a/UI/ColorVision.Themes/Themes/Icons.xaml
+++ b/UI/ColorVision.Themes/Themes/Icons.xaml
@@ -12,6 +12,20 @@
     <SolidColorBrush x:Key="light-green" Color="#1f801f" Opacity="1" />
     <System:Double x:Key="cls-1">0.75</System:Double>
     
+    <DrawingBrush x:Key="DISearch" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup x:Name="canvas">
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M0,0H16V16H0Z" />
+                </DrawingGroup>
+                <DrawingGroup x:Name="level_1">
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M11.5,6.5a5,5,0,1,1-5-5A5,5,0,0,1,11.5,6.5Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M1,6.5a5.5,5.5,0,0,0,9.017,4.224l5.129,5.13.708-.708-5.13-5.129A5.5,5.5,0,1,0,1,6.5Zm1,0A4.5,4.5,0,1,1,6.5,11,4.505,4.505,0,0,1,2,6.5Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+
     <DrawingBrush x:Key="DIRun" Stretch="None">
         <DrawingBrush.Drawing>
             <DrawingGroup>
@@ -68,10 +82,10 @@
     <DrawingBrush x:Key="DICut" Stretch="None">
         <DrawingBrush.Drawing>
             <DrawingGroup>
-                <DrawingGroup x:Name="canvas">
+                <DrawingGroup>
                     <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
                 </DrawingGroup>
-                <DrawingGroup x:Name="level_1">
+                <DrawingGroup>
                     <DrawingGroup Opacity="{DynamicResource cls-1}">
                         <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M10.673,11.748l-.9.438L4.839,2.065,5.249.627Z" />
                         <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M11.161,2.065,6.225,12.186l-.9-.438L10.751.627Z" />
