--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
@@ -77,7 +77,7 @@
                             <UniformGrid Columns="3">
                                 <CheckBox Content="自动积分" x:Name="AutoIntTime"/>
                                 <CheckBox Content="自动校零"  IsChecked="{Binding Config.IsShutterEnable}" x:Name="AutoShutterDark"/>
-                                <CheckBox Content="自适应校零" x:Name="AutoDark"/>
+                                <CheckBox Content="自适应校零" x:Name="AutoDark"  IsChecked="{Binding Config.IsAutoDark}"/>
                             </UniformGrid>
                         </StackPanel>
 
