--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
@@ -137,6 +137,7 @@
                                     <Setter Property="Background" Value="Transparent"/>
                                     <Setter Property="BorderThickness" Value="0"/>
                                     <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
+                                    <EventSetter Event="Click" Handler="GridViewColumnSort"/>
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
                             <GridViewColumn  Header="{x:Static properties:Resources.SerialNumber1}" Width="50">
