--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
@@ -7,7 +7,8 @@
              xmlns:vm ="clr-namespace:ColorVision.Common.MVVM;assembly=ColorVision.Common"
              xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:hc="https://handyorg.github.io/handycontrol" 
+             xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:ViewSpectrum}"
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource BorderBrush}"  Initialized="UserControl_Initialized">
@@ -74,20 +75,6 @@
                             </Border>
                         </Popup>
                         <Button  Content="交换" Click="Exchange_Click" Margin="2,0,0,0"/>
-                        <Button x:Name="Order" Content="排序" Click="Order_Click"  Visibility="Collapsed"  Margin="2,0,0,0"/>
-                        <Popup  x:Name="OrderPopup" AllowsTransparency="true" Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom" StaysOpen="false" PlacementTarget="{Binding ElementName=Order}">
-                            <Border Margin="5" Style="{StaticResource BorderModuleArea}" Width="80">
-                                <StackPanel Margin="5">
-                                    <StackPanel Margin="0,5">
-                                        <RadioButton x:Name="RadioID"  Content="名称"  IsChecked="True"  Checked="Radio_Checked"/>
-                                    </StackPanel>
-                                    <StackPanel Margin="0,5">
-                                        <RadioButton x:Name="RadioUp"  Content="递增" IsChecked="True" Checked="Radio_Checked"/>
-                                        <RadioButton x:Name="RadioDown"  Content="递减" Checked="Radio_Checked"/>
-                                    </StackPanel>
-                                </StackPanel>
-                            </Border>
-                        </Popup>
                     </ToolBar>
                 </ToolBarTray>
                 <Button Grid.Column="0" Margin="5,1,5,0" HorizontalAlignment="Right" Command="{Binding Config.EditCommand}" Padding="2" Height="25" Width="25" >
@@ -120,10 +107,10 @@
                                     <EventSetter Event="Click" Handler="GridViewColumnSort"/>
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
-                            <GridViewColumn   Header="序号" >
+                            <GridViewColumn   Header="{x:Static properties:Resources.SerialNumber1}" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
-                                        <TextBlock Text="{Binding IdShow}"/>
+                                        <TextBlock Text="{Binding Id}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -134,7 +121,7 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="测量时间">
+                            <GridViewColumn  Header="{x:Static properties:Resources.CreateTime}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
                                         <TextBlock Text="{Binding CreateTime}"/>
