--- a/Engine/ColorVision.Engine/Templates/POI/Image/WindowCVCIE.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/Image/WindowCVCIE.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Engine.Media"
         mc:Ignorable="d"
-        Title="WindowCVCIE" Height="450" Width="800" Background="{DynamicResource GlobalBackground}">
+        Title="WindowCVCIE" Height="450" Width="800" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,6 +14,22 @@
         <ToolBar>
             <Button Click="Button_Click" Margin="2,0,0,0" >
                 <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageSave}" />
+            </Button>
+            <Button Grid.Column="1" Margin="5,1,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25" >
+                <Button.Triggers>
+                    <EventTrigger RoutedEvent="Button.Click">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Button.Triggers>
+                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
+                    <TextBlock.RenderTransform>
+                        <RotateTransform x:Name="rotateTransform2"/>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
             </Button>
         </ToolBar>
        
